# VoxMeet

./: .gitignore  .npmrc  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  TROUBLESHOOTING.md  index.html  nodemon.json  package-lock.json  package.json  tsconfig.json  tsconfig.main.json  tsconfig.renderer.json  webpack.renderer.js
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: known-issues.md
landing/: index.html
native/modules/: test.js
native/modules/mic_monitor/: CMakeLists.txt  monitor_mic_usage.cpp
native/modules/output/: mic_monitor  recorder.node
native/modules/recorder/: CMakeLists.txt  Info.plist  binding.gyp  index.js  package-lock.json  package.json
native/modules/recorder/include/: aec_recorder.h  audio_device_manager.h  audio_system_capture.h  ducker.h  logger.h  logger_callback.h  mac_permission.h  mac_recorder.h  recorder.h  resampler.h  ring_buffer.h  wav_file_writer.h  webrtc_aec_wrapper.h
native/modules/recorder/include/nodejs/: recorder_bindings.h
native/modules/recorder/prebuilds/darwin-arm64/: node.napi.node
native/modules/recorder/src/: aec_recorder.mm  audio_device_manager.mm  audio_system_capture.mm  ducker.cpp  logger.cpp  mac_permission.mm  mac_recorder.cpp  recorder.cpp  resampler.cpp  ring_buffer.cpp  wav_file_writer.cpp  webrtc_aec_wrapper.cpp
native/modules/recorder/src/nodejs/: recorder.d.ts  recorder_bindings.cpp
scripts/: check-permissions.js  deploy-landing.sh  setup-sensevoice.sh  setup-whisper.sh
shared/: types.ts
src/: index.html  main.ts  preload.ts  renderer.ts  styles.css
src/main/: index.ts  mainPreload.ts  popupPreload.ts  preload.ts  types.ts
src/main/ai/: AISummaryClient.ts  MarkdownExport.ts  PromptTemplates.ts
src/main/audio/: AudioConverter.ts  SystemAudioManager.ts
src/main/ipc/: aiHandlers.ts  appInfo.ts  audioConverter.ts  index.ts  logger.ts  meetingHistory.ts  permissions.ts  recordingHandlers.ts  systemAudio.ts  transcriptionHandlers.ts
src/main/locales/: en.json  zh.json
src/main/meeting/: AudioFileManager.ts  MeetingSession.ts  RecorderController.ts
src/main/menu/: ShortcutManager.ts  TrayManager.ts
src/main/mic-monitor/: mic-monitor-daemon.ts
src/main/permissions/: PermissionManager.ts
src/main/store/: SettingsStore.ts
src/main/transcription/: ModelDownloader.ts  SenseVoiceClient.ts  WhisperClient.ts
src/main/utils/: TaskQueue.ts  i18n.ts  logger.ts
src/main/windows/: MainWindow.ts  PopupWindow.ts
src/renderer/: index.html  index.ts  styles.css
src/renderer/audio/: recorder.ts  visualizer.ts  wav.ts
src/renderer/dom/: elements.ts  ui.ts
src/renderer/logger/: ConsoleLogger.ts  index.ts
src/renderer/main/: App.vue  i18n.ts  index.html  main.ts  styles.css  types.ts
src/renderer/main/components/: AudioPlayer.vue  SettingsPanel.vue  Sidebar.vue  SummaryPanel.vue  TranscriptSegment.vue  TranscriptionPanel.vue
src/renderer/main/composables/: useAISettings.ts  useMeetings.ts  useModelDownload.ts  useTaskManager.ts  useTranscription.ts  useWhisperSettings.ts
src/renderer/main/extensions/: SlashCommand.ts
src/renderer/main/locales/: en.json  zh.json
src/renderer/popup/: index.html  index.ts  styles.css
src/renderer/types/: audio.ts  ffmpeg-installer.d.ts  global.d.ts
src/renderer/utils/: TaskQueue.ts  audioStorage.ts  ipc.ts  permissions.ts  throttle.ts  time.ts
src/types/: global.d.ts
whisper/: .gitignore
